--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -26,7 +26,7 @@ blocks:
           - sem-version python 3.7
           - checkout
           - cache restore
-          - pip install --cache-dir .pip_cache -r requirements.txt
+          - pip install --cache-dir .pip_cache -r requirement.txt
       jobs:
         - name: Unit tests
           commands:
