--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -27,15 +27,15 @@ blocks:
       jobs:
         - name: Unit tests
           commands:
-            - cd martor_demo
+            - cd smarttick
             - python manage.py makemigrations
             - python manage.py migrate
             - python manage.py test
         - name: Checklist
           commands:
-            - cd martor_demo
+            - cd smarttick
             - python manage.py check --deploy
         - name: Style Check
           commands:
             - pip install flake8
-            - flake8 martor_demo/ --max-line-length=127
+            - flake8 smarttick/ --max-line-length=127
