--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,7 +28,7 @@ blocks:
         - name: Unit tests
           commands:
             - cd smarttick
-            - python manage.py test
+            - python manage.py runserver
         - name: Checklist
           commands:
             - cd smarttick
