--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,6 +28,8 @@ blocks:
         - name: Unit tests
           commands:
             - cd martor_demo
+            - python manage.py makemigrations
+            - python manage.py migrate
             - python manage.py test
         - name: Checklist
           commands:
